2013-08-29  Richard Biener  <rguenther@suse.de>

PR tree-optimization/57685
	* tree-vrp.c (register_edge_assert_for_1): Recurse only for
	single-use operands to avoid exponential complexity.

	* gcc.dg/torture/pr57685.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@202068 138bc75d-0d04-0410-961f-82ee72b054a4